# video-rl-follower

./: .gitignore  AUTO_REVIEW.md  IMPLEMENTATION.md  LICENSE  README.md  REVIEW_STATE.json  pyproject.toml  setup.py  sharpa_dexhand_config.py
assets/urdf/: table_narrow.urdf  table_narrow_bowl_plate.urdf  table_narrow_cuttingboard.urdf  table_narrow_nail.urdf  table_narrow_screwdriver_hole.urdf  table_narrow_whiteboard.urdf
assets/urdf/dextoolbench/brush/blue_brush/: blue_brush.urdf
assets/urdf/dextoolbench/brush/red_brush/: red_brush.urdf
assets/urdf/dextoolbench/eraser/flat_eraser/: flat_eraser.urdf
assets/urdf/dextoolbench/eraser/handle_eraser/: handle_eraser.urdf
assets/urdf/dextoolbench/hammer/claw_hammer/: claw_hammer.urdf
assets/urdf/dextoolbench/hammer/mallet_hammer/: mallet_hammer.urdf  material.mtl
assets/urdf/kuka_sharpa_description/: iiwa14_left_sharpa_adjusted_restricted.urdf  iiwa14_right_sharpa_adjusted_restricted.urdf  sharpa_mount.stl
assets/urdf/kuka_sharpa_description/left_sharpa_meshes/: left_hand_C_MC_visual.STL  left_thumb_MC_modified.STL
assets/urdf/left_sharpa_ha4/: CMakeLists.txt  left_sharpa_ha4_overlay.usda  left_sharpa_ha4_v2_1.urdf  left_sharpa_ha4_v2_1.xml  left_sharpa_ha4_v2_1_adjusted_restricted.urdf  left_sharpa_ha4_v2_1_offset.xml  package.xml
assets/urdf/left_sharpa_ha4/config/: joint_names_Left_Sharpa_HA4.yaml
assets/urdf/left_sharpa_ha4/launch/: display.launch.py  gazebo.launch.py
assets/urdf/left_sharpa_ha4/left_sharpa_ha4_v2_1/: left_sharpa_ha4_v2_1.usd
data/grab_102/: 102_obj.urdf
data/trajectories/: example_g0.json  oakink_b7853_3hz.json  oakink_b7853_3hz_with_dex.json
dextoolbench/: metadata.py  objects.py
docs/: ISAACGYM_GOTCHAS.md  RETARGETING_AND_ENV_SETUP.md
isaacgymenvs/: __init__.py  launch_training.py  train.py
isaacgymenvs/algos/: __init__.py  dapg.py
isaacgymenvs/cfg/: config.yaml
isaacgymenvs/cfg/task/: DexTrackSharpa.yaml  SimToolReal.yaml  SimToolRealLSTMAsymmetric.yaml  VideoRLFollower.yaml
isaacgymenvs/cfg/train/: DexTrackSharpaPPO.yaml  SimToolRealLSTMAsymmetricPPO.yaml  SimToolRealLSTMPPO.yaml  SimToolRealLSTMSmallAsymmetricPPO.yaml  SimToolRealMLPAsymmetricPPO.yaml  SimToolRealPPO.yaml  VideoRLFollowerLSTMAsymmetricDAPG.yaml  VideoRLFollowerLSTMAsymmetricPPO.yaml  VideoRLFollowerPPO.yaml
isaacgymenvs/pbt/: pbt.py
isaacgymenvs/tasks/: __init__.py
isaacgymenvs/tasks/base/: vec_task.py
isaacgymenvs/tasks/dextrack_sharpa/: __init__.py  adjacent_links.py  check_coords.py  debug_asset_load.py  diag_cube_orientation_render.py  diag_long_play.py  diag_no_contact.py  diag_obj_quat_provenance.py  diag_quat_order.py  diag_quat_render_check.py  diag_render_no_sim.py  diag_replay_state.py  diag_set_after_sim.py  env.py  render_frame.py  render_hybrid_montage.py  render_quat_AB.py  render_replay_montage.py  smoke_env.py  trajectory.py  visualize_hybrid_replay.py  visualize_init.py  visualize_kinematic_replay.py
isaacgymenvs/tasks/dextrack_sharpa/obs/: __init__.py  goal_obs.py
isaacgymenvs/tasks/dextrack_sharpa/rewards/: __init__.py  dextrack_reward.py  maniptrans_reward.py
isaacgymenvs/tasks/simtoolreal/: adjacent_links.py  env.py  generate_objects.py  object_size_distributions.py  utils.py
isaacgymenvs/tasks/video_rl_follower/: __init__.py  env.py  trajectory.py
isaacgymenvs/utils/: observation_action_utils_sharpa.py  reformat.py  rlgames_utils.py  torch_jit_utils.py  utils.py  wandb_restore_utils.py  wandb_utils.py
record/: 2026-05-11_paper_reset_attempts.md  2026-05-11_tracking_branch_results.md
rl_games/: pyproject.toml
rl_games/rl_games/algos_torch/: a2c_continuous.py  central_value.py  players.py  torch_ext.py
rl_games/rl_games/common/: a2c_common.py  experience.py  player.py
scripts/: setup_env.sh  test_pipeline.py  visualize_trajectory_in_isaacgym.py
tools/: build_iiwa14_right_sharpa_urdf.py  merge_retarget_into_trajectory.py  process_maniptrans_trajectory.py  visualize_reference.py
(+28 files in other folders)
