[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_games"
version = "1.6.1"
description = ""
readme = "README.md"
requires-python = ">=3.7.1,<3.12"
authors = [
    { name = "Denys Makoviichuk", email = "trrrrr97@gmail.com" },
    { name = "Viktor Makoviichuk", email = "victor.makoviychuk@gmail.com" },
]
dependencies = [
    "tensorboard>=2.8.0",
    "tensorboardx>=2.5",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "setproctitle>=1.2.2",
    "opencv-python>=4.5.5",
    "wandb>=0.12.11",
]

[tool.setuptools.packages.find]
include = ["rl_games*"]

[project.optional-dependencies]
atari = ["ale-py>=0.7", "AutoROM[accept-rom-license]>=0.4.2"]
brax = ["brax>=0.0.13", "jax>=0.3.13"]
mujoco = ["mujoco-py>=2.1.2"]
envpool = ["envpool>=0.6.1"]
