<?xml version="1.0"?>
<package format="3">
  <name>left_sharpa_ha4</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for HA4.0-R-version5-0808.
    This package contains configuration data, 3D models, and launch files
    for HA4.0-R-version5-0808 robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <author>TODO</author>
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Export: architecture independent -->
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
